# hamur

./: LICENSE  ProjectHome.md  README.md
HamurEngine/: CMakeLists.txt  Hamur-vc2008.sln  HamurII.sln  HamurII_2010.sln  readme.txt
HamurEngine/Hamur/: CMakeLists.txt  Hamur.vcproj  MILESTONES.txt  TODO.txt  dynamicObject.h  hamurWorld.cpp  hamurWorld.h  history.txt
HamurEngine/Hamur/doc/: MILESTONES.txt  TODO.xls  history.txt
HamurEngine/Hamur/propertySheets/: FMOD_Release.props  SDL_Release.vsprops
HamurEngine/Hamur/src/: MainState.cpp  MainState.h  hamur.h  hamurDefinitions.h  hamurEngine.cpp  hamurEngine.h  hamurEvent.cpp  hamurEvent.h  hamurFont.cpp  hamurFont.h  hamurGL.cpp  hamurGL.h  hamurGP.cpp  hamurGP.h  hamurLog.h  hamurOpenGL.cpp  hamurOpenGL.h  hamurSingleton.h  hamurTex.cpp  hamurTex.h  hamurTexMR.cpp  hamurTexMR.h  hamurTexture.h  hamurTextureManager.cpp  hamurTimer.h  main.cpp  mainState.h
HamurEngine/Hamur/src/audio/: hamurAuMR.cpp  hamurAuMR.h  hamurFX.cpp  hamurFX.h  hamurSong.cpp  hamurSong.h  hamurStream.cpp  hamurStream.h
HamurEngine/Hamur/src/game/: hamurAnimation.cpp  hamurObject.cpp  hamurObject.h  hamurState.cpp  hamurState.h  hamurStateMR.cpp  hamurStateMR.h  hamurStateManager.cpp  hamurWorld.cpp  hamurWorld.h
HamurEngine/Hamur/src/helper/: hamurColor.cpp  hamurColor.h  hamurConsole.cpp  hamurConsole.h  hamurFile.cpp  hamurFile.h  hamurHash.h  hamurLog.cpp  hamurLog.h  hamurMath.cpp  hamurPlotter.cpp  hamurPlotter.h  hamurString.cpp  hamurString.h  hamurVec2.h  hamurVec3.h
HamurEngine/HamurTest/: HamurTest.vcxproj
HamurEngine/HamurTest/propertySheets/: FMOD_Debug.props  SDL_Release.props
HamurEngine/HamurTest/src/: TestState.cpp  TestState.h  main.cpp
HamurEngine/TestProject/: Animation.h  Bacteria.cpp  Bacteria.h  BacteriaFattie.cpp  BacteriaFattie.h  BacteriaNorm.cpp  BacteriaNorm.h  BacteriaShooter.cpp  BacteriaShooter.h  BacteriaSlim.cpp  BacteriaSlim.h  BacteriaStrayer.cpp  BacteriaStrayer.h  Base.cpp  Base.h  Brush.cpp  Brush.h  Bullet.cpp  Bullet.h  Button.cpp  Collision.h  DefendingBullet.cpp  DefendingBullet.h  ExampleState.cpp  ExampleState.h  FeedbackInfo.h  FeedbackState.cpp  FeedbackState.h  FlossingBullet.cpp  FlossingBullet.h  GUI.h  GUIElement.cpp  GameOverState.cpp  GameOverState.h  HowToPlayState.cpp  IngameState.cpp  IngameState.h  Level.cpp  Level.h  MainState.h  (+29 more)
HamurEngine/TestProject/src/: DynamicObject.cpp  DynamicObject.h  ExampleState.cpp  GroundObject.cpp  GroundObject.h  MainState.cpp  main.cpp
branches/hamur-1.0/HamurEngine/Hamur/: CMakeLists.txt
branches/hamur-1.0/HamurEngine/HamurTest/: HamurTest.vcproj
branches/hamur-1.0/HamurEngine/TestProject/: Animation.h  BacteriaFattie.cpp  BacteriaNorm.cpp  BacteriaShooter.h  BacteriaStrayer.h  Button.h  CMakeLists.txt  FeedbackInfo.cpp  FeedbackState.cpp  Food.cpp  GameOverState.h  SelectionState.h  Teeth.h  Tooth.cpp  Wave.cpp  Wave.h  Waves.xml  Window.h
branches/hamur-1.0/HamurEngine/TestProject/propertySheets/: FMOD_Release.vsprops  SDL_Debug.vsprops
branches/hamur-1.0/HamurEngine/tinyxml/: tinyxmlSTL.vcproj
tags/version-1.0/HamurEngine/: HamurII_2010.sln
tags/version-1.0/HamurEngine/TestProject/: BacteriaShooter.cpp  BacteriaSlim.h  DynamicObject.h  FeedbackInfo.h  FlossingBullet.cpp  FlossingBullet.h  GUIElement.h  GameOverState.cpp  HowToPlayState.h  IngameState.h  Level.cpp  Level.h  MenuState.cpp  Panel.cpp  Selection.h  SelectionState.cpp  ShooterBullet.cpp  ShooterBullet.h  TestProject.vcproj  TextDataReader.h  ToothPasteBullet.h  main.cpp
trunk/HamurEngine/: CMakeLists.txt  Hamur-vc2010.sln  HamurII.sln  HamurII_2008.sln  readme.txt
trunk/HamurEngine/Hamur/: CMakeLists.txt  Hamur.vcproj  Hamur.vcxproj  MILESTONES.txt  TODO.txt  groundObject.h  history.txt
trunk/HamurEngine/Hamur/doc/: TODO.xls
trunk/HamurEngine/Hamur/propertySheets/: FMOD_Debug.vsprops  FMOD_Release.vsprops  SDL.vsprops  SDL_Debug.props  SDL_Debug.vsprops  SDL_Release.vsprops
trunk/HamurEngine/Hamur/src/: MainState.cpp  hamur.h  hamurDefinitions.h  hamurEngine.cpp  hamurEngine.h  hamurEvent.cpp  hamurEvent.h  hamurFont.cpp  hamurFont.h  hamurGL.cpp  hamurGL.h  hamurGP.cpp  hamurGP.h  hamurLog.cpp  hamurOpenGL.cpp  hamurOpenGL.h  hamurSingleton.h  hamurTex.cpp  hamurTex.h  hamurTexMR.cpp  hamurTexMR.h  hamurTexture.cpp  hamurTexture.h  hamurTextureManager.h  main.cpp  mainState.h
trunk/HamurEngine/Hamur/src/audio/: hamurAuMR.cpp  hamurAuMR.h  hamurFX.cpp  hamurFX.h  hamurSong.cpp  hamurSong.h  hamurStream.cpp  hamurStream.h
trunk/HamurEngine/Hamur/src/game/: hamurAnimation.h  hamurObject.cpp  hamurObject.h  hamurState.h  hamurStateMR.cpp  hamurStateMR.h  hamurStateManager.h  hamurWorld.cpp  hamurWorld.h
trunk/HamurEngine/Hamur/src/helper/: hamurColor.cpp  hamurColor.h  hamurConsole.cpp  hamurConsole.h  hamurFile.cpp  hamurFile.h  hamurHash.h  hamurLog.cpp  hamurLog.h  hamurMath.cpp  hamurMath.h  hamurPlotter.cpp  hamurPlotter.h  hamurString.cpp  hamurString.h  hamurVec2.h  hamurVec3.h
trunk/HamurEngine/HamurTest/propertySheets/: SDL_Release.vsprops
trunk/HamurEngine/HamurTest/src/: main.cpp  (+1 more)
trunk/HamurEngine/TestProject/: Animation.cpp  Bacteria.cpp  Bacteria.h  BacteriaFattie.cpp  BacteriaFattie.h  BacteriaNorm.cpp  BacteriaNorm.h  BacteriaShooter.cpp  BacteriaShooter.h  BacteriaSlim.cpp  BacteriaSlim.h  BacteriaStrayer.cpp  BacteriaStrayer.h  Base.cpp  Base.h  Brush.cpp  Brush.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  Collision.h  DefendingBullet.cpp  DefendingBullet.h  DynamicObject.cpp  ExampleState.cpp  ExampleState.h  FeedbackInfo.cpp  FeedbackState.cpp  FeedbackState.h  FlossingBullet.cpp  FlossingBullet.h  Food.h  GUI.h  GUIElement.cpp  GUIElement.h  GameOverState.cpp  GroundObject.cpp  GroundObject.h  HowToPlayState.cpp  (+36 more)
trunk/hamur/: hamurEvent.cpp  hamurEvent.h  hamurFont.cpp  hamurFont.h  hamurGL.cpp  hamurGL.h  hamurGP.cpp  hamurGP.h  hamurLog.cpp  hamurLog.h  hamurTex.h  hamurTexMR.cpp  hamurTexMR.h
trunk/hamur/audio/: hamurAuMR.cpp  hamurAuMR.h  hamurFX.cpp  hamurFX.h  hamurSong.cpp  hamurSong.h  hamurStream.cpp  hamurStream.h
(+33 files in other folders)
